--- a/plugins/firewall/app/views/firewall/index.rhtml
+++ b/plugins/firewall/app/views/firewall/index.rhtml
@@ -21,46 +21,42 @@
 
 <% disabled = !@permissions[:write] %>
 
-
+<%= javascript_include_tag "jquery.activity", "notifier" %>
 <script type="text/javascript">
-  //WORKER CALL
-  var notify = function (test) {
-    console.log("params " + test);
-    var url = 'notifier';
-    var xhr = new XMLHttpRequest();
+  var worker, intervalID;
+//   worker = Notifier({'module':'firewall', 'id':'all'});
+//   terminateOnReload(worker);
+//   var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent(<%=form_authenticity_token.inspect%>)
+  killWorkerOnReload(Notifier({'module':'firewall', 'id':'all'}));
 
-    if(xhr) { 
-      xhr.open('get', url, true);
-      xhr.send();
-      
-      xhr.onreadystatechange = function() {
-	if(xhr.readyState == 4) {
-	  if (xhr.status == 200) {
-	    console.log("XHR HTTP: " + xhr.responseText);
-	  } 
-	}
+  jQuery(function($){
+    $.activity.init({
+      interval: 1000, //check every second if user acrive!
+      inactive: 5000, //set to 20 seconds
+      intervalFn: function(){
+	console.log("User is idle: " + Math.round((this.now() - this.defaults.lastActive)/1000) + ' sec');
+      },
+      inactiveFn: function(){
+	console.warn("User is inactive: " + Math.round((this.now() - this.defaults.lastActive)/1000)  + ' sec');
+	killWorker(worker);
+	$.activity.update();
       }
-    }
-  }
+    });
+    
+   $(document).bind('click mousemove', function(){
+      if($.activity.isActive()) {
+	$.activity.update();
+      } else {
+	console.log("User active start worker and reactivate activity check!");
+	Notifier({'module':'firewall', 'id':'all'});
+	$.activity.reActivate();
+      }
+    });
+  });
 
-// setInterval(notify, 5000, 'test');
+  
 
-//NOT FOR WORKER
-
-var pollFirewallCacheController = function() {
-  var jqxhr =  $.getJSON("/notifier?plugin=firewall&id=all", function(data, textStatus, jqXHR) {
-    console.log("getJSON: " + data);
-    $('#timeoutMessage').css('background', '#f6f6f6').css('color', '#800000').fadeIn().text('Attention: Cache is out-of-date, performing page refresh!').delay(5000).fadeOut();;
-  })
-}
-
-setInterval(pollFirewallCacheController, 10000);
 </script>
-
-<!-- WORKER FALLBACK -->
-<!-- <%= @response = periodically_call_remote :url => {:controller=>'notifier?plugin=firewall&id=all'}, :frequency => 6, :method=>:get %> -->
-
-<% logger.error("RESPONSEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE #{@response.inspect}") %>
 
 <div class='plugin-icon'><img src='/icons/yast-firewall.png' alt="firewall module"/><%=_("Firewall")%></div>
 <div class="plugin-content">
