- change cursor style to default if firewall is disabled

--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -377,6 +377,7 @@ table.patches td {
 .round10t { -moz-border-radius:10px 10px 0px 0px; -webkit-border-radius:10px 10px 0px 0px; }
 .round10b { -moz-border-radius:0px 0px 10px 10px; -webkit-border-radius:0px 0px 10px 10px; }
 
+.firewallForm_enabled { cursor: pointer;}
 .firewallForm_disabled { background-color:#fff; color:#ccc; cursor: default;}
 .label-image { width:14px; height:14px; vertical-align:baseline; }
 
@@ -439,7 +440,7 @@ table.patches td {
 #allowed_services p, #blocked_services p { padding-left:2px; vertical-align:middle;}
 #allowed_services p:hover, #blocked_services p:hover { background-color: #fff; }
 #allowed_services span, #blocked_services span {
-  cursor:pointer; 
+/*   cursor:pointer;  */
   font-weight:bolder; 
   -moz-border-radius:10px; 
   -webkit-border-radius:10px; 
