- CSS image sprite for plugin icon (control panel) - Redesigned user bar (control panel)

--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -764,3 +764,31 @@ input.error { float: none;}
 input#role_name { margin-left:5px; }
 input.computed { opacity: 0.5; }
 /* END */
+
+
+/* CONTROL PANEL USERBAR ICONS */
+#userbar { color:#777; line-height: 45px; position: absolute; right: 0; z-index: 2; margin-right:0px; }
+#userbar span.userbar-icon { display: inline-block; font-weight:bold; font-size:11px; cursor:default; margin-right:10px;}
+#userbar span.userbar-icon:before { vertical-align:-50%; line-height:10px; padding-right:1px; }
+#userbar span.home-icon:before { content:url(../images/control-panel-home.png); }
+#userbar span.user-icon:before { content:url(../images/control-panel-user.png); }
+#userbar span.language-icon {border:1px solid #8a8a8a; color:#eee; -moz-border-radius:3px; -webkit-border-radius:3px; padding:1px 2px 1px 6px; text-align:center; margin-right:4px; background-color:#999; text-shadow: 0 -1px 1px #222; }
+#userbar span.logout-icon:before { content:url(../images/control-panel-logout.png); }
+
+span.plugin-shortcut { display:inline-block; background: url(../icons/plugin-icons.png) no-repeat top left;  width: 48px; height: 48px; }
+span.icon-monitoring{ background-position: 0 0;} 
+span.icon-yast-firewall{ background-position: 0 -98px; } 
+span.icon-yast-groups{ background-position: 0 -196px; } 
+span.icon-yast-kerberos{ background-position: 0 -294px; } 
+span.icon-yast-ldap{ background-position: 0 -392px; } 
+span.icon-yast-mail-server{ background-position: 0 -490px; } 
+span.icon-yast-network{ background-position: 0 -588px; } 
+span.icon-yast-ntp-client{ background-position: 0 -686px; } 
+span.icon-yast-online_update{ background-position: 0 -784px; } 
+span.icon-yast-permissions{ background-position: 0 -882px; } 
+span.icon-yast-product-registration{ background-position: 0 -980px; } 
+span.icon-yast-samba-client{ background-position: 0 -1078px; } 
+span.icon-yast-sw_source{ background-position: 0 -1176px; } 
+span.icon-yast-system-user{ background-position: 0 -1274px; } 
+span.icon-yast-system{ background-position: 0 -1372px; } 
+span.icon-yast-users{ background-position: 0 -1470px; } 
