--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -44,7 +44,7 @@
 
 
   <div id="status">
-  <h3><%= image_tag("/images/monitoring.png", :height=>"23", :width=>"23", :border=>"0") %> <%= _("Status") %></h3>
+  <h3><%= image_tag("/icons/monitoring.png", :height=>"23", :width=>"23", :border=>"0") %> <%= _("Status") %></h3>
   <div class="plugin-content">
     <div id="status_patches">
       <% if ActionController::Routing.possible_controllers.include?("patch_updates") %>
@@ -92,12 +92,12 @@
     <% if @shortcuts.empty? %>
       <!-- image from: http://www.clker.com/disclaimer.html under creative common public domain license -->
       <h4 id="warning_message_text">
-	<%= image_tag("/images/warning-42.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
+	<%= image_tag("/images/warning-big.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
 	<%= _("WebYaST modules are not installed on your system!") %>
       </h4>
     <% elsif  !@shortcuts.empty? && @count == @shortcuts.count %>
       <h4 id="warning_message_text">
-	<%= image_tag("/images/warning-42.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
+	<%= image_tag("/images/warning-big.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
 	<%= _("You have no permissions to see or change the modules, please contact the administrator to set up permissions first!") %>
       </h4>
     <% else %>
@@ -107,7 +107,7 @@
 	  html_map[:title] = data["description"] unless data["description"].blank?
 	%>
 	<% link_to(data['url'], html_map) do %>
-	  <%= image_tag(data['icon']) %><br />
+	  <span class="plugin-shortcut icon-<%=data['icon'].split('/')[2].split('.')[0]%>"></span><br />
 	  <%= data['title'] %>
 	<% end %>
       <% end %>
