--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -18,30 +18,33 @@
 #++
 %>
 <% content_for :head do %>
-  <%= javascript_include_tag :defaults %>
+<%= javascript_include_tag :defaults %>
 <% end %>
 
 <% display_patches = ControlPanelConfig.read 'display_patch_status', true %>
 <% display_status = ControlPanelConfig.read 'display_system_status', true %>
 
-<% if ActionController::Routing.possible_controllers.include?("status") && display_status %>
+<% if ActionController::Routing.possible_controllers.include?("patch_updates") && display_patches %>
   <% javascript_tag do -%>
     $(document).ready( function() {
-      <%= remote_function(:update => "status_status", :url => { :controller => :status, :action => :show_summary, :background => true }) %>
+    <%= remote_function(:update => "status_patches",
+	:url => { :controller => :patch_updates, :action => :show_summary, :background => true }) %>
     });
   <% end -%>
 <% end %>
 
-<% if ActionController::Routing.possible_controllers.include?("patch_updates") && display_patches %>
+<% if ActionController::Routing.possible_controllers.include?("status") && display_status %>
   <% javascript_tag do -%>
     $(document).ready( function() {
-      <%= remote_function(:update => "status_patches", :url => { :controller => :patch_updates, :action => :show_summary, :background => true }) %>
+    <%= remote_function(:update => "status_status",
+      :url => { :controller => :status, :action => :show_summary, :background => true }) %>
     });
- <% end -%>
+  <% end -%>
 <% end %>
 
+
   <div id="status">
-  <h3><%= image_tag("/images/monitoring.png", :height=>"23", :width=>"23", :border=>"0") %> <%= _("Status") %></h3>
+  <h3><%= image_tag("/icons/monitoring.png", :height=>"23", :width=>"23", :border=>"0") %> <%= _("Status") %></h3>
   <div class="plugin-content">
     <div id="status_patches">
       <% if ActionController::Routing.possible_controllers.include?("patch_updates") %>
@@ -89,12 +92,12 @@
     <% if @shortcuts.empty? %>
       <!-- image from: http://www.clker.com/disclaimer.html under creative common public domain license -->
       <h4 id="warning_message_text">
-	<%= image_tag("/images/warning-42.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
+	<%= image_tag("/images/warning-big.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
 	<%= _("WebYaST modules are not installed on your system!") %>
       </h4>
     <% elsif  !@shortcuts.empty? && @count == @shortcuts.count %>
       <h4 id="warning_message_text">
-	<%= image_tag("/images/warning-42.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
+	<%= image_tag("/images/warning-big.png", :style=>"vertical-align:middle;", :height=>"40", :width=>"42", :border=>"0") %>
 	<%= _("You have no permissions to see or change the modules, please contact the administrator to set up permissions first!") %>
       </h4>
     <% else %>
@@ -104,7 +107,7 @@
 	  html_map[:title] = data["description"] unless data["description"].blank?
 	%>
 	<% link_to(data['url'], html_map) do %>
-	  <%= image_tag(data['icon']) %><br />
+	  <span class="plugin-shortcut icon-<%=data['icon'].split('/')[2].split('.')[0]%>"></span><br />
 	  <%= data['title'] %>
 	<% end %>
       <% end %>
