--- a/webclient/app/views/controlpanel/show_all.rhtml
+++ b/webclient/app/views/controlpanel/show_all.rhtml
@@ -33,7 +33,7 @@
       
       <% link_to (data['url']) do %>
         <%= image_tag(data['icon']) %>
-        <p><%= data['title'] %></p>
+        <p><%= data['original-title'] %></p>
       <% end %>
       
       <% shortcuts_counter +=1 %>
