--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -25,12 +25,12 @@
   <% if JSMIN == false %>
     <%= javascript_include_tag "jquery.quicksearch.js"-%>
   <% end %>
- 
+
   <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "jquery.activity", "notifier" %>
 
   <style type="text/css">
     label.error { float: none; color: red; padding-left: 6.5em; vertical-align: top; width: 70%; text-align: left }
-    /* style for 'enabled'/'disabled' status texts */
     span.repo_status { font-style: italic }
     span.repo_status_enabled { color: rgb(0,255,0) }
     span.repo_status_disabled { color: rgb(255,0,0) }
@@ -98,42 +98,12 @@
 
     // onsubmit handler
     function form_handler(sid) {
-      if ($('#repositoryForm_' + sid).valid())
-      {
+      if ($('#repositoryForm_' + sid).valid()) {
 	//define message for blockUI
 	var message = <%= jss _("Please wait") -%>;
 	blockForm('repositoryForm_'+sid, message)
-
-/*	$.blockUI.defaults.message = "<p><h1 id='message'>" + message + " ... <img id='waitAnimation' style='vertical-align:middle' src='/images/wait.gif'/></h1></p>";
-	$.blockUI.defaults.applyPlatformOpacityRules = false;
-	$('#repositoryForm_' + sid).block({ 
-	  showOverlay: true, 
-	  css: { 
-	    padding:        0, 
-	    margin:         0, 
-	    width:          '30%', 
-	    top:            '40%', 
-	    left:           '35%', 
-	    textAlign:      'center', 
-	    color:          '#3399cc', 
-	    border:         '5px solid #aaa', 
-	    backgroundColor:'#fff', 
-	    cursor:         'wait',
-	    '-webkit-border-radius': '5px', 
-	    '-moz-border-radius': '5px'
-	  }
-	});*/
-
-// 	var message = "<%= _("Please wait") -%>";
-// 	disableFormOnSubmit(message);
-// 	disable_forms();
-// 	$('#progress_' + sid).show();
 	return true;
-      }
-      else
-      {
-	return false;
-      }
+      } else { return false; }
     }
 
     // onclick handler for "delete" link parent
@@ -150,9 +120,6 @@
 	//define message for blockUI
 	var message = <%= jss _("Please wait") -%>;
 	blockForm('repositoryForm_'+sid, message);
-// 	disableFormOnSubmit(message);
-// 	disable_forms();
-// 	$(progress).show();
       }
     }
 
@@ -173,27 +140,24 @@
 
     function switch_flag(link, field, deflt, changes) {
       // change the hidden field and the link text
-      if ($(field).val() == "true")
-      {
+      if ($(field).val() == "true") {
 	$(field).val("false");
 	$(link).text(<%= jss _("enable") -%>);
-      }
-      else
-      {
+      } else {
 	$(field).val("true");
 	$(link).text(<%= jss _("disable") -%>);
       };
 
       // display/hide the changes text
-      if (deflt == $(field).val())
-      {
+      if (deflt == $(field).val()) {
 	$(changes).hide();
-      }
-      else
-      {
+      } else {
 	$(changes).show();
       };
     };
+
+    var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
+    startNotifier({'module':'repository', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
   </script>
 <% end %>
 
@@ -202,7 +166,8 @@
     <div class="loading"></div>
     <% disabled = !@permissions[:write] %>
 
-    <h3 style="margin-left:12px;"><%=_("Configured software repositories") %></h3>
+    <h3 style="margin-left:12px;"><%=_("Configured software repositories") %> <span id="questionMark" style="float:right; margin: 2px 12px;">?</span></h3>
+   
 
     <div id="softwarebar">
       <div id="home-container">
@@ -221,7 +186,7 @@
       <div id="link-container">
 	  <% if !disabled %>
 	    <div id="action_links" class="action_links">	
-	      <%= link_to image_tag("/icons/yast-online_update.png", :class=>"icons") +  (_("Add New Repository") ), {:action => 'add'}, :onclick=>"$('#progress').show()" %>
+	      <%= link_to image_tag("/icons/yast-online_update.png", :class=>"icons button") +  (_("Add New Repository") ), {:action => 'add'}, :onclick=>"$('#progress').show()" %>
 	    </div>
 	  <% end %>
       </div>
